--- a/kittyCalculator/Base.lproj/Main.storyboard
+++ b/kittyCalculator/Base.lproj/Main.storyboard
@@ -311,8 +311,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="grumpycat" translatesAutoresizingMaskIntoConstraints="NO" id="AYF-1y-cKT">
                                 <rect key="frame" x="244" y="264" width="125" height="98"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20%" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AMj-Nf-nGE">
-                                <rect key="frame" x="244" y="130" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AMj-Nf-nGE">
+                                <rect key="frame" x="244" y="130" width="81" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -329,17 +329,15 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="stripescat" translatesAutoresizingMaskIntoConstraints="NO" id="kcR-S2-CPF">
                                 <rect key="frame" x="382" y="401" width="125" height="98"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="zQA-rB-pNd">
-                                <rect key="frame" x="289" y="226" width="22" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="22" id="OVa-fS-pIa"/>
-                                    <constraint firstAttribute="height" constant="21" id="TIG-dv-Nkj"/>
-                                    <constraint firstAttribute="width" constant="22" id="gBc-A6-60x"/>
-                                </constraints>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="spotscat" translatesAutoresizingMaskIntoConstraints="NO" id="vnz-Kq-zcD">
                                 <rect key="frame" x="382" y="264" width="125" height="98"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byt-BD-Rmb">
+                                <rect key="frame" x="327" y="130" width="22" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -347,6 +345,7 @@
                             <constraint firstItem="AMj-Nf-nGE" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="1C3-f2-A5k"/>
                             <constraint firstItem="vnz-Kq-zcD" firstAttribute="height" secondItem="AYF-1y-cKT" secondAttribute="height" id="2CM-yK-xuy"/>
                             <constraint firstItem="KTY-nl-YAj" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="3DL-rQ-ezj"/>
+                            <constraint firstItem="AYF-1y-cKT" firstAttribute="top" secondItem="mYU-Vk-sig" secondAttribute="bottom" constant="54" id="3Er-lk-Fwq"/>
                             <constraint firstItem="AYF-1y-cKT" firstAttribute="leading" secondItem="Nru-2i-shd" secondAttribute="trailing" constant="14" id="6Da-At-Tj9"/>
                             <constraint firstItem="kcR-S2-CPF" firstAttribute="leading" secondItem="Oyp-Z0-uud" secondAttribute="trailing" constant="13" id="Hv1-Jm-cpP"/>
                             <constraint firstItem="KTY-nl-YAj" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="I5U-aV-GGW"/>
@@ -354,10 +353,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="vnz-Kq-zcD" secondAttribute="trailing" constant="10" id="PcL-OC-uU6"/>
                             <constraint firstItem="Oyp-Z0-uud" firstAttribute="leading" secondItem="tA6-wr-MZH" secondAttribute="trailing" constant="14" id="Pyf-mi-5rr"/>
                             <constraint firstItem="vnz-Kq-zcD" firstAttribute="width" secondItem="AYF-1y-cKT" secondAttribute="width" id="Q07-5s-b5Q"/>
-                            <constraint firstItem="zQA-rB-pNd" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="QkR-KA-Zbg"/>
-                            <constraint firstItem="AYF-1y-cKT" firstAttribute="top" secondItem="zQA-rB-pNd" secondAttribute="bottom" constant="17" id="RSW-ZI-bek"/>
                             <constraint firstItem="Nru-2i-shd" firstAttribute="leading" secondItem="DV0-ZU-zzW" secondAttribute="leadingMargin" constant="10" id="W6Q-VF-XrQ"/>
-                            <constraint firstItem="zQA-rB-pNd" firstAttribute="top" secondItem="mYU-Vk-sig" secondAttribute="bottom" constant="16" id="WIE-x1-vvZ"/>
                             <constraint firstItem="mYU-Vk-sig" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="dhV-ew-ezJ"/>
                             <constraint firstItem="Nru-2i-shd" firstAttribute="width" secondItem="AYF-1y-cKT" secondAttribute="width" id="fMW-gV-SjP"/>
                             <constraint firstItem="tA6-wr-MZH" firstAttribute="width" secondItem="Oyp-Z0-uud" secondAttribute="width" id="fVc-wz-Cb7"/>
@@ -368,6 +364,7 @@
                             <constraint firstItem="vnz-Kq-zcD" firstAttribute="leading" secondItem="AYF-1y-cKT" secondAttribute="trailing" constant="13" id="mCy-vD-bBb"/>
                             <constraint firstItem="tA6-wr-MZH" firstAttribute="leading" secondItem="DV0-ZU-zzW" secondAttribute="leadingMargin" constant="10" id="man-jz-Nin"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kcR-S2-CPF" secondAttribute="trailing" constant="10" id="okn-tu-YrD"/>
+                            <constraint firstItem="Byt-BD-Rmb" firstAttribute="leading" secondItem="AMj-Nf-nGE" secondAttribute="trailing" constant="2" id="pGa-rK-G6k"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Options" id="geI-fs-o8b">
@@ -440,7 +437,6 @@
     <resources>
         <image name="blackcat" width="328" height="300"/>
         <image name="grumpycat" width="328" height="300"/>
-        <image name="heart" width="600" height="600"/>
         <image name="siamesecat" width="328" height="300"/>
         <image name="speechBubble" width="417" height="411"/>
         <image name="spotscat" width="328" height="300"/>
